errors.txt
Error compiling Cython file:
------------------------------------------------------------
...


cdef void cheapVertPath(FLOAT[:,:] costMap, INT[:,:] pathCosts) nogil:
  cdef:
    # makes costMap cumulative in-place by DP
    calcMinCosts(costMap)
              ^
------------------------------------------------------------

quilting_parallel.pyx:350:15: Non-extern C function 'calcMinCosts' declared but not defined

Error compiling Cython file:
------------------------------------------------------------
...
  cdef:
    # makes costMap cumulative in-place by DP
    calcMinCosts(costMap)

    # finds a path in the now cumulative costMap and marks it with 1's in pathCosts
    pathBacktrace(costMap, pathCosts)
               ^
------------------------------------------------------------

quilting_parallel.pyx:353:16: Non-extern C function 'pathBacktrace' declared but not defined

Error compiling Cython file:
------------------------------------------------------------
...
        break

# TODO oh god taking a transpose in C...
cdef void cheapHorizCut(FLOAT[:,:] costMap, INT[:,:] pathCosts) nogil:
  cdef:
    INT[:,:] path = cheapVertCut(costMap.T, pathCosts).T
                                                   ^
------------------------------------------------------------

quilting_parallel.pyx:378:52: Accessing Python attribute not allowed without gil

Error compiling Cython file:
------------------------------------------------------------
...
        break

# TODO oh god taking a transpose in C...
cdef void cheapHorizCut(FLOAT[:,:] costMap, INT[:,:] pathCosts) nogil:
  cdef:
    INT[:,:] path = cheapVertCut(costMap.T, pathCosts).T
                             ^
------------------------------------------------------------

quilting_parallel.pyx:378:30: Converting to Python object not allowed without gil
/Users/idzhang/.pyxbld/temp.macosx-10.5-x86_64-2.7/pyrex/quilting_parallel.c:1:2: error: Do not use this file, it is the
      result of a failed Cython compilation.
#error Do not use this file, it is the result of a failed Cython compilation.
 ^
1 error generated.
Traceback (most recent call last):
  File "driver_parallel.py", line 12, in <module>
    from quilting_parallel import *
  File "/Users/idzhang/anaconda/lib/python2.7/site-packages/pyximport/pyximport.py", line 435, in load_module
    language_level=self.language_level)
  File "/Users/idzhang/anaconda/lib/python2.7/site-packages/pyximport/pyximport.py", line 227, in load_module
    exec("raise exc, None, tb", {'exc': exc, 'tb': tb})
  File "/Users/idzhang/anaconda/lib/python2.7/site-packages/pyximport/pyximport.py", line 209, in load_module
    inplace=build_inplace, language_level=language_level)
  File "/Users/idzhang/anaconda/lib/python2.7/site-packages/pyximport/pyximport.py", line 186, in build_module
    reload_support=pyxargs.reload_support)
  File "/Users/idzhang/anaconda/lib/python2.7/site-packages/pyximport/pyxbuild.py", line 100, in pyx_to_dll
    dist.run_commands()
  File "/Users/idzhang/anaconda/lib/python2.7/distutils/dist.py", line 953, in run_commands
    self.run_command(cmd)
  File "/Users/idzhang/anaconda/lib/python2.7/distutils/dist.py", line 972, in run_command
    cmd_obj.run()
  File "/Users/idzhang/anaconda/lib/python2.7/site-packages/Cython/Distutils/build_ext.py", line 164, in run
    _build_ext.build_ext.run(self)
  File "/Users/idzhang/anaconda/lib/python2.7/distutils/command/build_ext.py", line 337, in run
    self.build_extensions()
  File "/Users/idzhang/anaconda/lib/python2.7/site-packages/Cython/Distutils/build_ext.py", line 172, in build_extensions
    self.build_extension(ext)
  File "/Users/idzhang/anaconda/lib/python2.7/distutils/command/build_ext.py", line 496, in build_extension
    depends=ext.depends)
  File "/Users/idzhang/anaconda/lib/python2.7/distutils/ccompiler.py", line 574, in compile
    self._compile(obj, src, ext, cc_args, extra_postargs, pp_opts)
  File "/Users/idzhang/anaconda/lib/python2.7/distutils/unixccompiler.py", line 122, in _compile
    raise CompileError, msg
ImportError: Building module quilting_parallel failed: ["CompileError: command 'gcc' failed with exit status 1\n"]